tests/ui/traits/const-traits/const_derives/derive-const-non-const-type.stderr
error[E0015]: cannot call non-const associated function `<A as Default>::default` in constant functions
  --> $DIR/derive-const-non-const-type.rs:12:14
   |
LL | #[derive_const(Default)]
   |                ------- in this derive macro expansion
LL | pub struct S(A);
   |              ^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
